--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,4 +14,5 @@ ENV PORT=8080
 EXPOSE 8080
 
 # Run the application
-CMD ["python", "main.py"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+
